# Orbolay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  check.yml  draft-release.yml
.zed/: debug.json
crates/orbolay-core/: Cargo.toml
crates/orbolay-core/src/: app_state.rs  config.rs  lib.rs  user.rs
crates/orbolay-core/src/payloads/: ipc.rs  mod.rs  ws.rs
crates/orbolay-core/src/util/: bridge.rs  mod.rs  text.rs
crates/orbolay-keys/: Cargo.toml
crates/orbolay-keys/src/: lib.rs
crates/orbolay-logging/: Cargo.toml
crates/orbolay-logging/src/: lib.rs
crates/orbolay-transport/: Cargo.toml
crates/orbolay-transport/src/: config_watcher.rs  lib.rs  transport.rs
crates/orbolay-transport/src/ipc/: commands.rs  ipc_message_handler.rs  mod.rs  setters.rs  subscription.rs  ui_message_handler.rs
crates/orbolay-transport/src/updates/: mod.rs
crates/orbolay-transport/src/util/: discord_auth.rs  mod.rs
crates/orbolay-transport/src/websocket/: mod.rs
crates/orbolay-ui/: Cargo.toml
crates/orbolay-ui/src/: config.rs  key_support.rs  lib.rs
crates/orbolay-ui/src/components/: action_button.rs  message_row.rs  messages_section.rs  mod.rs  soundboard.rs  user_context_menu_item.rs  user_row.rs  voice_controls.rs  voice_section.rs
crates/orbolay-ui/src/configurator/: dropdown.rs  input.rs  keybind.rs  mod.rs  setting.rs  toggle.rs
crates/orbolay-ui/src/util/: image.rs  mod.rs  scale.rs
src/: app_state.rs  config.rs  config_watcher.rs  display.rs  ipc.rs  ipc_payloads.rs  keys.rs  logger.rs  main.rs  manager.rs  notifications.rs  payloads.rs  subscription.rs  target.rs  transport.rs  user.rs  websocket.rs  window.rs
src/components/: action_button.rs  message_row.rs  messages_section.rs  mod.rs  soundboard.rs  user_row.rs  voice_controls.rs  voice_section.rs
src/configurator/: color_picker.rs  dropdown.rs  input.rs  keybind.rs  mod.rs  setting.rs  toggle.rs
src/ipc/: commands.rs  ipc_message_handler.rs  mod.rs  payloads.rs  setters.rs  subscription.rs  ui_message_handler.rs
src/keys/: bind.rs  event.rs  mod.rs  state.rs
src/payloads/: ipc.rs  mod.rs  ws.rs
src/updates/: mod.rs
src/util/: colors.rs  discord_auth.rs  image.rs  mod.rs  process.rs  text.rs  theme.rs
src/websocket/: mod.rs
