[package]
name = "orbolay"
version = "3.0.0"
edition = "2024"
rust-version = "1.95"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.packager]
product-name = "Orbolay"
identifier = "dev.spikehd.orbolay"
out-dir = "bins"
log-level = "debug"
formats = ["all"]

[dependencies]
bytes = "1"
chrono = "0.4.41"
colored = "3.0.0"
dirs = "6.0.0"
display-info = "0.5.5"
flume = "0.12"
#freya = { version = "0.4.0-rc.19", features = ["engine"] }
freya = { git = "https://github.com/marc2332/freya.git", branch = "main", features = ["engine"] }
gumdrop = "0.8.1"
interprocess = "2.4.2"
native-dialog = { version = "0.9.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sysinfo = { version = "0.38.4", default-features = false, features = ["user", "system"] }
tungstenite = { version = "0.29", features = ["url"] }
ureq = "3.0.12"
url = "2.5.8"
winit = "0.30"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab", "serialize"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.61.3"
