[package]
name = "orbolay"
version = "3.2.0"
edition = "2024"
rust-version = "1.95"
description = "Quick, small, native, multi-platform Discord overlay alternative"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Orbolay"
identifier = "dev.spikehd.orbolay"
package-types = ["deb"]

[dependencies]
bytes = "1"
chrono = "0.4.41"
colored = "3.0.0"
dirs = "6.0.0"
display-info = "0.5.6"
flume = "0.12"
freya = { version = "0.4.0-rc.23", features = ["engine"] }
gumdrop = "0.8.1"
interprocess = "2.4.2"
native-dialog = { version = "0.9.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
notify = "8.2.0"
open = "5.3.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = { version = "0.39.2", default-features = false, features = ["user", "system"] }
tungstenite = { version = "0.29", features = ["url"] }
ureq = "3.0.12"
url = "2.5.8"
winit = "0.30"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab", "serialize"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62.2"
