[package]
name = "orbolay-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
bytes = { workspace = true }
display-info = { workspace = true }
flume = { workspace = true }
freya = { workspace = true }
orbolay-core = { path = "../orbolay-core" }
orbolay-keys = { path = "../orbolay-keys" }
orbolay-logging = { path = "../orbolay-logging" }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = { workspace = true }
